cros: Fix unresponsive app list button

|back_and_app_list_background_| is interfering with event targeting and
causing the app list button to be unresponsive, specifically in the
right side of the button. NOTE: This only repros on device, not on the
emulator.

Prevent |back_and_app_list_background_| from recieving events to prevent
this.

Bug: 900632
Change-Id: Ib2cd8e51cb560d84307904c86ae46ecc388e2424
Reviewed-on: https://chromium-review.googlesource.com/c/1338723
Reviewed-by: Alex Newcomer <newcomer@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Commit-Queue: Alex Newcomer <newcomer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#608796}
Former-commit-id: 879b37c6c751745d8c9d9dcf67e1f5958991307f